// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading should not render loading if not active: not active 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      app="true"
      class="v-content"
      classname="mb-5"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <div
          id="test-contents"
        >
          contents
        </div>
      </div>
    </main>
    <div
      class="v-overlay text-center theme--dark"
      style="z-index: 5;"
    >
      <div
        class="v-overlay__scrim"
        style="opacity: 0; background-color: rgb(33, 33, 33); border-color: #212121;"
      />
    </div>
  </div>
</div>
`;

exports[`Loading should render loading message: message 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      app="true"
      class="v-content"
      classname="mb-5"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <div
          id="test-contents"
        >
          contents
        </div>
      </div>
    </main>
    <div
      class="v-overlay text-center v-overlay--active theme--dark"
      style="z-index: 5;"
    >
      <div
        class="v-overlay__scrim"
        style="opacity: 0.46; background-color: rgb(33, 33, 33); border-color: #212121;"
      />
      <div
        class="v-overlay__content"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          class="v-progress-circular v-progress-circular--indeterminate"
          role="progressbar"
          style="height: 64px; width: 64px;"
        >
          <svg
            style="transform: rotate(0deg);"
            viewBox="21.333333333333332 21.333333333333332 42.666666666666664 42.666666666666664"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              class="v-progress-circular__overlay"
              cx="42.666666666666664"
              cy="42.666666666666664"
              fill="transparent"
              r="20"
              stroke-dasharray="125.664"
              stroke-dashoffset="125.66370614359172px"
              stroke-width="2.6666666666666665"
            />
          </svg>
          <div
            class="v-progress-circular__info"
          />
        </div>
         
        <div
          class="mt-3 font-weight-bold title"
        >
          
        test message
    
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading should render loading: active 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      app="true"
      class="v-content"
      classname="mb-5"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <div
          id="test-contents"
        >
          contents
        </div>
      </div>
    </main>
    <div
      class="v-overlay text-center v-overlay--active theme--dark"
      style="z-index: 5;"
    >
      <div
        class="v-overlay__scrim"
        style="opacity: 0.46; background-color: rgb(33, 33, 33); border-color: #212121;"
      />
      <div
        class="v-overlay__content"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          class="v-progress-circular v-progress-circular--indeterminate"
          role="progressbar"
          style="height: 64px; width: 64px; color: rgb(0, 51, 51); caret-color: #033;"
        >
          <svg
            style="transform: rotate(0deg);"
            viewBox="21.333333333333332 21.333333333333332 42.666666666666664 42.666666666666664"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              class="v-progress-circular__overlay"
              cx="42.666666666666664"
              cy="42.666666666666664"
              fill="transparent"
              r="20"
              stroke-dasharray="125.664"
              stroke-dashoffset="125.66370614359172px"
              stroke-width="2.6666666666666665"
            />
          </svg>
          <div
            class="v-progress-circular__info"
          />
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;
